--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -189,8 +189,8 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #loginform ul li:nth-child(even){width:80%;}
 #loginform ul li input{width:100%; height: 40px; background:#FFD54F; border:1px solid #FF8F00;}
 #loginform .loginsubmit{width:100%; height:40px; float:left}
-#loginform .loginsubmit input[type=button]{width:100%; height: 100%; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center; margin-top:50px; }
-
+#loginform .loginsubmit input[type=button]{width:100%; height: 100%; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center; margin-top:20px; }
+#loginform .loginsubmit input[name=searchpassword]{margin-top:10px;}
 /* 거래 내역 dialog */
 
  .Transactions{display:none;}
@@ -260,7 +260,8 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #passwordCheckform{width:100%; height: 100%; float:left; position: relative; }
 #passwordCheckform h1{width:100%; float:left; color:#555555; margin-top:15px; margin-bottom:15px; line-height:40px; text-align: center; position: relative; }
 #passwordCheckform img{background:#FFD54F; border-radius:100%; padding:5px; position: absolute;left:210px; top:0;}
-#passwordCheckform p{text-align:center;}
+#passwordCheckform p{text-align:center; color:#999;}
+#passwordCheckform p span{color:#FF8F00;}
 #passwordCheckform {width:100%; text-align: center; margin-top:30px;}
 #passwordCheckform input{height:30px; }
 #passwordCheckform #updateform{margin-top:30px;}
@@ -296,3 +297,19 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 .passwordchage .passwordchagesubmit input[type=button]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
 .passwordchage .passwordchagesubmit input:first-child{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
 .passwordchage .passwordchagesubmit input[type=button]:hover{background:#FFCA28;}
+
+
+/* 비밀번호 찾기 */
+#passwordFindForm{width:700px; height:500px;  box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5); position: absolute; top:50%; left:50%; transform:translate(-50%,-50%); }
+#passwordFindForm .passwordform{width:100%; height: 100%; float:left; position:relative; text-align:center; margin-top:122px;}
+#passwordFindForm .passwordform img{background:#FFD54F; border-radius:100%; padding:5px; position: absolute; left:227px; top:0;}
+#passwordFindForm h1{width:100%; float:left; color:#555555; margin-top:15px; margin-bottom:15px; line-height:40px; text-align: center; position: relative; }
+#passwordFindForm .passwordform p{color:#999;}
+#passwordFindForm .passwordform p span{color:#FF8F00;}
+#passwordFindForm .passwordform input{width:240px; height:45px; margin-top:50px; margin-right:30px;}
+#passwordFindForm .passwordform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
+#passwordFindForm .passwordform input[type=button]:hover{background:#FFCA28;}
+#passwordFindForm .passwordform button{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s; display:none;}
+#passwordFindForm .passwordform button:hover{background:#FFCA28;}
+#passwordFindForm .passwordform #passfind{width:100%; float:left; text-align:center; margin-top:10px;}
+
