--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -36,9 +36,12 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #profile .profilemenu{width:350px; height: 100%; background:#FFD54F; float:right; z-index:5; position: absolute; top:0 ; right:-350px;  }
 #profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#FF8F00; transition:0.4s;}
 #profile .profilemenu ul li #chatWindow{width:100%; float:left; overflow: scroll; overflow-x:hidden;}
+#profile .profilemenu ul li #partnerId{background: #fff;}
+#profile .profilemenu ul li #message{background: #fff;}
 #profile .profilemenu ul li:nth-child(1){position: relative;}
 #profile .profilemenu ul #transactionsEvent{cursor:pointer;}
 #profile .profilemenu ul #cashTransactionsEvent{cursor:pointer;}
+#profile .profilemenu ul #purchaseapply{cursor:pointer;}
 #profile .profilemenu ul li a{text-decoration: none; color:inherit;}
 #profile .profilemenu ul li:hover{background:#FFCA28;}
 #profile .profilemenu img{border-radius:100%; padding-top:20px; border:1px solid #ff8f00}
@@ -332,3 +335,13 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 #purchaseform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
 #purchaseform input[type=button]:hover{background:#FFCA28;}
+
+/* 구매 신청란 dialog */
+.purchaselistdialog{display:none}
+
+#purchaselistform{width:100%; height:530px; float:left;   position: relative;  }
+#purchaselistform table{width:100%; float:left;}
+#purchaselistform table tr{width:100%; height: 40px; text-align: center;}
+#purchaselistform table tr:nth-child(1){box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5); font-weight: bold;  height: 50px; line-height: 50px; }
+#purchaselistform table tr:nth-child(1) td{height: 50px; line-height: 50px;}
+#purchaselistform table tr td{width:20%; height:40px; line-height:40px; float:left} 
