--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -117,7 +117,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #main .subimg .down img{ z-index:4;  background:#fff; transition: 0.4s;}
 #main .subimg .down:hover img{background:#FFAB40; }
 
-#main .mainEx{width:40%; height: 400px; float:right; margin-left: 3%; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
+#main .mainEx{width:40%; height: 417px; float:right; margin-left: 3%; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
 #main .mainEx h1:nth-child(1){margin-top:60px;}
 #main .mainEx h1{text-align: center;}
 #main .mainEx ul{text-align: center;}
@@ -320,12 +320,12 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #passwordFindForm .passwordform button:hover{background:#FFCA28;}
 #passwordFindForm .passwordform #passfind{width:100%; float:left; text-align:center; margin-top:10px;}
 
-/* 충전 dialog*/
+/* 마일리지 충전 dialog*/
 .chargedialog{display:none;}
 #chargeform{width:100%; height: 100%; float:left; text-align: center;}
 #chargeform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
 
-#chargeform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
+#chargeform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s; margin-bottom:45px;}
 #chargeform input[type=button]:hover{background:#FFCA28;}
 
 /* 구매 dialog */
@@ -333,7 +333,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #purchaseform{width:100%; height: 100%; float:left; text-align: center;}
 #purchaseform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
 
-#purchaseform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s;}
+#purchaseform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s; margin-bottom:45px;}
 #purchaseform input[type=button]:hover{background:#FFCA28;}
 
 /* 구매 신청란 dialog */
@@ -345,3 +345,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #purchaselistform table tr:nth-child(1){box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5); font-weight: bold;  height: 50px; line-height: 50px; }
 #purchaselistform table tr:nth-child(1) td{height: 50px; line-height: 50px;}
 #purchaselistform table tr td{width:20%; height:40px; line-height:40px; float:left} 
+
+@media(max-width:1020px){
+	#main .mainEx{width:40%; height: 417px; float:right; margin-left:0; box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5); }
+}
