--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -17,41 +17,44 @@ header .menu{width:100%; height:50px; background:#fff; position: absolute; z-ind
 header .menu .logo{float:left; width:140px; height: 100%; font-size:24px; padding:8px; font-weight:bold;}
 header .menu .logo a{text-decoration: none; color:inherit;}
 header .menu ul{float:right; text-align: center; }
-header .menu ul li{float:left; width:124px;  color:#000;  line-height: 50px; position: relative;  cursor: pointer; overflow: hidden;}
-header .menu ul li::before{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; top:0; left:100%; transition:0.4s;}
+header .menu ul li{float:left; width:124px;  color:#000;  line-height: 50px; position: relative; font-weight:bold;  cursor: pointer; overflow: hidden; }
+header .menu ul li:hover{color:#FF8F00;}
+header .menu ul li:nth-child(1):hover{color:#000;}
+header .menu ul li::before{content:""; width:100%; height:10px; background:#FFCA28; float:left; position: absolute; top:-100%;; left:0; transition:0.4s;}
+header .menu ul li:hover::before{top:0;}
+header .menu ul li:nth-child(1):hover::before{top:-100%;}
+/* header .menu ul li::before{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; top:0; left:100%; transition:0.4s;}
 header .menu ul li::after{content:""; width:100%; height:3px; background:#FF8F00; float:left; position: absolute; bottom:0; right:100%; transition:0.4s;}
 header .menu ul li:hover::before{left:0;}
-header .menu ul li:hover::after{right:0;}
+header .menu ul li:hover::after{right:0;} */
 header .icon{width: 143px; float:left;}
 header .icon a{text-decoration:none; color: inherit; float:left; }
 
 /* 카테로기  dialog */
-.category{width:	100%; height: 100%; float:left; position: relative; display:none;}
+.category{width:100%; height: 100%; float:left; position: relative; display:none;}
 .category ul{text-align:center;  padding: 0;}
-.category ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  color:#FF8F00; background:#FFD54F; cursor:pointer; transition:0.4s;  font-weight: bold;}
-.category ul li:hover{background:#FFCA28;}
+.category ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left; font-size:26px;  color:#fff; background:#FFCA28;  cursor:pointer; transition:0.4s;  font-weight: bold;}
+.category ul li:hover{background:#FFB300;}
 
 
 #profile{width:100%; height:100%; float:left; position: absolute; overflow: hidden;}
-#profile .profilemenu{width:350px; height: 100%; background:#FFD54F; float:right; z-index:5; position: absolute; top:0 ; right:-350px;  }
-#profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#FF8F00; transition:0.4s;}
-#profile .profilemenu ul li #chatWindow{width:100%; float:left; overflow: scroll; overflow-x:hidden;}
-#profile .profilemenu ul li #partnerId{background: #fff;}
-#profile .profilemenu ul li #message{background: #fff;}
+#profile .profilemenu{width:350px; height: 100%; background:#FFCA28; float:right; z-index:5; position: absolute; top:0 ; right:-350px;  }
+#profile .profilemenu ul li{text-align:center; line-height:50px; border-bottom:1px solid #FF8F00; color:#fff; font-size:18px;font-weight:bold;transition:0.4s;}
+#profile .profilemenu ul li #chatWindow{width:100%; float:left; color:#000; overflow: scroll; overflow-x:hidden; font-size:14px;}
+#profile .profilemenu ul li #submit{line-height: 40px;}
+#profile .profilemenu ul li #partnerId{background: #fff; font-size:14px;}
+#profile .profilemenu ul li #message{background: #fff; font-size:14px;}
 #profile .profilemenu ul li:nth-child(1){position: relative;}
 #profile .profilemenu ul #transactionsEvent{cursor:pointer;}
 #profile .profilemenu ul #cashTransactionsEvent{cursor:pointer;}
 #profile .profilemenu ul #purchaseapply{cursor:pointer;}
 #profile .profilemenu ul li a{text-decoration: none; color:inherit;}
-#profile .profilemenu ul li:hover{background:#FFCA28;}
+#profile .profilemenu ul li:hover{background:#FFB300;}
 #profile .profilemenu img{border-radius:100%; padding-top:20px; border:1px solid #ff8f00}
 #profile .profilemenu .beaf img{border:none; position: absolute; top: 0 ; right:0; display:none; padding:10px; cursor: pointer;}
-
-#profile form ul{width:700px; height:300px; box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5); margin-top:50px;}
-#profile form ul li{float:left; }
-#profile form ul li:nth-child(odd){width:20%; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; line-height:38px;}
-#profile form ul li:nth-child(even){width:70%;}
-#profile ul li input{width:100%; height: 40px; background:#ffd54f; border:1px solid #ff8f00;} 
+#profile ul li input{width:100%; height: 40px; background:#FFCA28;  height: 51px; border:none;} 
+#profile ul li #submit{transition:0.4s;}
+#profile ul li #submit:hover{background:#FFB300;}
 
 
 /* index */
@@ -67,8 +70,8 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 #search .searchmain>ul li:nth-child(3) span{border-left:1px solid #fff; padding-left: 5px;}
 
 #search .sub_category ul{text-align: center;  display: none;}
-#search .sub_category ul li{float:left; width: 20%; background:#fff; border:1px solid #000; border-radius:10px; margin-right: 10px; cursor:pointer; box-shadow:2px 2px rgba(0,0,0,0.5); transition: 0.4s; } 
-#search .sub_category ul li:hover{background: #0000ff; color:#fff;}
+#search .sub_category ul li{float:left; width: 20%; background:#fff; border:1px solid #000; border-radius:5px; margin-right: 10px; cursor:pointer; box-shadow:2px 2px rgba(0,0,0,0.5); transition: 0.4s; } 
+
 
 
 
@@ -78,16 +81,16 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 
 
 #board{width:100%;float:left; position: relative; z-index: 3; margin-top:150px; }
-#board .boardtitle{width:100%; height:50px; line-height: 50px; font-size:30px; font-weight:bold; text-align: center; background: #000; color:#fff;}
-#board .noticeboard ul{float:left; margin:1%; border:3px solid #f9f9f9;  margin:0;}
+#board .boardtitle{width:100%; height:50px; line-height: 50px; font-size:30px; font-weight:bold; text-align: center; background: #FFCA28; color:#fff;}
+#board .noticeboard ul{float:left;  border:3px solid #FFCA28;  margin:0;}
 #board .noticeboard ul li{text-align: center; font-size:24px; color:#000; padding:5px;}
 #board .noticeboard ul li>img{width:300px; height: 200px;}
 #board .noticeboard ul a{text-decoration: none; color: #fff;}
 #board .noticeboard ul li:nth-child(3){font-weight: bold;}
 
-#board .noticeboard ul li:nth-child(5){background:#96d4ce; color:#fff; cursor: pointer; position: relative; overflow: hidden; transition: 0.4s; padding: 0; }
+#board .noticeboard ul li:nth-child(5){background:#FFCA28; border-top:1px solid #FF8F00;  color:#fff; cursor: pointer; position: relative; overflow: hidden; transition: 0.4s; padding: 0; }
 #board .noticeboard ul li:nth-child(5) button{border:none; background:inherit; width: 100%; height: 100%; padding:5px;}
-#board .noticeboard ul li:nth-child(5):hover{background: #000;}
+#board .noticeboard ul li:nth-child(5):hover{background: #FFB300;}
 
 .search{width:100%; position: relative;  margin-bottom:30px;}
 .search ul{ position:absolute; left:50%; transform:translate(-50%,0);}
@@ -96,7 +99,7 @@ header .icon a{text-decoration:none; color: inherit; float:left; }
 
 .pagination{position: relative; left:50%; transform:translate(-50%,0);}
 
-footer{  float:left;  z-index: 3;  bottom: 0; right:0; position: fixed;}
+footer{float:left;  z-index: 3;  bottom: 0; right:0; position: fixed;}
 footer> .noticeboardsubmit{ padding:50px;   z-index: 3; margin-bottom: 30px;}
 footer> .noticeboardsubmit>button{background:inherit; border:none; width: 124px; height: 50px; float:right; border:1px solid #000; color:#000;  position: relative; overflow: hidden;  cursor: pointer; transition:0.4s; }
 footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
@@ -139,15 +142,15 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #mainboard form>ul li:nth-child(2) input{width:50%; height:100%; float:left; border:none; text-align:center;}
 #mainboard form ul li input[name=sale]{width:50%; height: 100%; flaot:left border:none; text-align:center;}
 #mainboard form>ul li>input[type=number]{width:100%; height: 100%; border:none;}
-#mainboard form>ul li>input[type=button]{width:50%; float:left; border:none; border-right:1px solid #FF8F00; background:#FFD54F; color:#FF8F00; }
+#mainboard form>ul li>input[type=button]{width:50%; float:left; border:none; border-right:1px solid #FF8F00; background:#FFD54F; color:#fff; }
 #mainboard form>ul li span{width:50%; height100%; float:left; text-align:center}
-#mainboard form>ul li:nth-child(odd){width:20%; text-align:center; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; font-weight: bold; }
+#mainboard form>ul li:nth-child(odd){width:20%; text-align:center; background:#FFD54F; border:1px solid #FF8F00; color:#fff; font-weight: bold; }
 #mainboard form>ul li:nth-child(even){width:80%;float:left; background:#fff; border:1px solid #FF8F00;}
-#mainboard form>ul li:nth-child(11){background:#FFD54F; color:#FF8F00; border-right:1px solid #FF8F00; height: 410px; line-height: 410px;}
+#mainboard form>ul li:nth-child(11){background:#FFD54F; color:#fff; border-right:1px solid #FF8F00; height: 410px; line-height: 410px;}
 #mainboard form>ul li:nth-child(12){border:none;}
 #mainboard form>ul li textarea{width:100%; padding:0; float:right; height: 300px; }
 #mainboard .imgs{width:100%; height:150px; float:left;  }
-#mainboard .imgs .imgbtn span{width:50%; float:left; line-height:97px; text-align:center; border-right:1px solid #FF8F00; background:#FFD54F; color:#FF8F00;font-weight: bold;}
+#mainboard .imgs .imgbtn span{width:50%; float:left; line-height:97px; text-align:center; border-right:1px solid #FF8F00; background:#FFD54F; color:#fff; font-weight: bold;}
 #mainboard .imgs .imgbtn{width:20%;float:left; height: 97px; border-left:1px solid #FF8F00; border-bottom:1px solid #FF8F00; background:#FFD54F; }
 #mainboard .imgs .imgbtn img{background: #FF0000; border:3px solid #FF0000; border-radius:20%; text-align:center; margin-left:10px; margin-top:10px; cursor:pointer;}
 #mainboard .imgs ul{width:80%; float:left;  border-left:1px solid #FF8F00; border-right:1px solid #FF8F00; border-bottom:1px solid #FF8F00; border-top:1px solid #FF8F00; height:97px; overflow: scroll; background: #fff; }
@@ -163,8 +166,8 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 
 .bigcategory{width:	100%; height: 100%; float:left; position: relative; display:none;}
 .bigcategory ul{text-align:center;  padding: 0;}
-.bigcategory ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  color:#FF8F00; background:#FFD54F; cursor:pointer; transition:0.4s;  font-weight: bold;}
-.bigcategory ul li:hover{background:#FFCA28;}
+.bigcategory ul li{width:195px; height: 200px; line-height:200px; border:1px solid #FF8F00;  float:left;  font-size:26px;  color:#fff; background:#FFCA28;  cursor:pointer; transition:0.4s;  font-weight: bold;}
+.bigcategory ul li:hover{background:#FFB300;}
 
 /* memberup dialog */
 .memberupdialog{display:none;}
@@ -173,15 +176,14 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #memberup .memberupform form{width:100%; float:left}
 #memberup .memberupform form ul{width:100%; float:left;}
 #memberup .memberupform form ul li{float:left; border:none; height: 50px;}
-#memberup .memberupform form ul li:nth-child(odd){width:20%; color:#FF8F00; border:1px solid #FF8F00; background:#FFD54F;
- text-align: center; line-height: 50px; }
+#memberup .memberupform form ul li:nth-child(odd){width:20%; color:#fff; border:1px solid #FF8F00;  background:#FFCA28; text-align: center; line-height: 50px; }
 #memberup .memberupform form ul li:nth-child(even){width:80%;}
-#memberup .memberupform form ul li:nth-child(2) input{width:80%; border:none; border-left:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00; }
-#memberup .memberupform form ul li input{width:100%;height: 100%;float:left; background:#FFD54F;  border:1px solid #FF8F00;}
+#memberup .memberupform form ul li:nth-child(2) input{width:70%; border:none; border-left:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00; }
+#memberup .memberupform form ul li input{width:100%;height: 100%;float:left;  background:#FFCA28;   border:1px solid #FF8F00;}
 #memberup .memberupform form ul li input[name=id]{width:60%;}
-#memberup .memberupform form ul li .check{width:40%; height: 100%; line-height:50px; float:left; background:#FFD54F; border-right:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00 }
+#memberup .memberupform form ul li #check{width:40%; height: 100%; line-height:50px; float:left;  background:#FFCA28; border-right:1px solid #FF8F00; border-top:1px solid #FF8F00; border-bottom:1px solid #FF8F00 }
 #memberup .memberupform .memberupsubmit{width:100%; float:left; text-align:center;}
-#memberup .memberupform .memberupsubmit input{width:120px; height: 40px; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center;}
+#memberup .memberupform .memberupsubmit input{width:120px; height: 40px; background:#FFD54F; border:1px solid #FF8F00; color:#fff; text-align: center;}
 
 .dialogopacity{width:100%; height: 100%; display:none; background:rgba(0,0,0,0.5); z-index: 1000; top:0; left:0; position: fixed;}
 
@@ -192,11 +194,11 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #loginform ul li:nth-child(1){margin-top:0;}
 #loginform ul li:nth-child(2){margin-top:0;}
 #loginform ul li{float:left; margin-top:20px;}
-#loginform ul li:nth-child(odd){width:20%; text-align: center; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; line-height:38px;}
+#loginform ul li:nth-child(odd){width:20%; text-align: center;  background:#FFCA28; border:1px solid #FF8F00; color:#fff; line-height:38px;}
 #loginform ul li:nth-child(even){width:80%;}
-#loginform ul li input{width:100%; height: 40px; background:#FFD54F; border:1px solid #FF8F00;}
+#loginform ul li input{width:100%; height: 40px; background:#FFCA28; border:1px solid #FF8F00;}
 #loginform .loginsubmit{width:100%; height:40px; float:left}
-#loginform .loginsubmit input[type=button]{width:100%; height: 100%; background:#FFD54F; border:1px solid #FF8F00; color:#FF8F00; text-align: center; margin-top:20px; }
+#loginform .loginsubmit input[type=button]{width:100%; height: 100%; background:#FFCA28; border:1px solid #FF8F00; color:#fff; text-align: center; margin-top:20px; }
 #loginform .loginsubmit input[name=searchpassword]{margin-top:10px;}
 /* 거래 내역 dialog */
 
@@ -325,16 +327,16 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #chargeform{width:100%; height: 100%; float:left; text-align: center;}
 #chargeform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
 
-#chargeform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s; margin-bottom:45px;}
-#chargeform input[type=button]:hover{background:#FFCA28;}
+#chargeform input[type=button]{width:120px; height:45px; background: #FFCA28; border:1px solid #FF8F00; color:#fff; cursor:pointer; transition:0.4s; margin-bottom:45px;}
+#chargeform input[type=button]:hover{background:#FFB300;}
 
 /* 구매 dialog */
 .purchasedialog{display:none;}
 #purchaseform{width:100%; height: 100%; float:left; text-align: center;}
 #purchaseform input[type=number]{width:70%; height: 50px; float:left; margin:80px;}
 
-#purchaseform input[type=button]{width:120px; height:45px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00; cursor:pointer; transition:0.4s; margin-bottom:45px;}
-#purchaseform input[type=button]:hover{background:#FFCA28;}
+#purchaseform input[type=button]{width:120px; height:45px; background: #FFCA28; border:1px solid #FF8F00; color:#fff; cursor:pointer; transition:0.4s; margin-bottom:45px;}
+#purchaseform input[type=button]:hover{background:#FFB300;}
 
 /* 구매 신청란 dialog */
 .purchaselistdialog{display:none}
