--- a/ItemMarket/WebContent/style/css.css
+++ b/ItemMarket/WebContent/style/css.css
@@ -231,9 +231,9 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 	line-height:200px;
 	border-radius:5%;
 	text-align:center;
-	background:#FFD54F;
+	background:#FFCA28;
 	border:1px solid #FF8F00;
-	color:#FF8F00;
+	color:#fff;
 	box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5);
 	float:left;
 	margin-right:50px;
@@ -241,7 +241,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 	cursor:pointer;
 }
 #memberform .memberupdate:hover{
-	background:#FFCA28;
+	background:#FFB300;
 }
 
 #memberform .memberdrop{
@@ -250,9 +250,9 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 	line-height:200px;
 	border-radius:5%;
 	text-align:center;
-	background:#FFD54F;
+	background:#FFCA28;
 	border:1px solid #FF8F00;
-	color:#FF8F00;
+	color:#fff;
 	box-shadow:2px 2px 2px 2px rgba(0,0,0,0.5);
 	float:left;
 	transition:0.4s;
@@ -260,7 +260,7 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 }
 
 #memberform .memberdrop:hover{
-	background:#FFCA28;
+	background:#FFB300;
 }
 
 /* 비밀번호 확인 dialog */
@@ -275,26 +275,26 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 #passwordCheckform input{height:30px; }
 #passwordCheckform #updateform{margin-top:30px;}
 #passwordCheckform #deleteform{margin-top:30px;}
-#passwordCheckform input[type=button]{width:120px; height:30px; background: #FFD54F; border:1px solid #FF8F00; color:#FF8F00;  }
+#passwordCheckform input[type=button]{width:120px; height:30px; background:#FFCA28; border:1px solid #FF8F00; color:#fff; transition:0.4s; cursor:pointer;  }
+#passwordCheckform input[type=button]:hover{background:#FFB300}
 
 
 /* MeberUpdate */
 .privacy{width:60%; height: 600px; float:left; text-align: center; position: absolute; top: 0;  left:50%; transform:translate(-50%);}
-.privacy h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#ffd54f; color:#FF8F00; line-height: 40px;}
+.privacy h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#FFCA28; color:#fff; line-height: 40px;}
 .privacy ul li{float:left;}
-.privacy ul li:nth-child(odd){width:30%;  line-height: 50px;  text-align: center; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  }
+.privacy ul li:nth-child(odd){width:30%;  line-height: 50px;  text-align: center; background:#FFCA28; color:#fff; border:1px solid #FF8F00;  }
 .privacy ul li:nth-child(even){width:69%; height: 50px;  border:1px solid #ff8f00;}
 .privacy ul li input{width:100%; float:left; height: 50px; border:none; } 
 .privacy .memberupdatesubmit{width:100%; float:left; margin-top:30px; }
-.privacy .memberupdatesubmit input[type=button]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
-.privacy .memberupdatesubmit input:first-child{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
-.privacy .memberupdatesubmit input[type=button]:hover{background:#FFCA28;}
+.privacy .memberupdatesubmit input[type=button]{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
+.privacy .memberupdatesubmit input:first-child{width:150px; height: 50px; background:#FFCA28; color:#Fff; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
+.privacy .memberupdatesubmit input[type=button]:hover{background:#FFB300;}
 
 .passwordchage{width:60%; height: 400px; float:left; text-align: center; position: absolute; top: 400px;  left:50%; transform:translate(-50%);}
-.passwordchage h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#ffd54f; color:#FF8F00; line-height: 40px;}
-
+.passwordchage h3{width:100% ;  margin-top:30px; border:1px solid #ff8f00; height: 40px; background:#FFCA28; color:#fff; line-height: 40px;}
 .passwordchage ul li{float:left;}
-.passwordchage ul li:nth-child(1){width:30%; line-height:154px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;}
+.passwordchage ul li:nth-child(1){width:30%; line-height:154px; background:#FFCA28; color:#fff; border:1px solid #FF8F00;}
 .passwordchage ul li:nth-child(2){width:69%;}
 .passwordchage ul li ul{width:100%; float:left;}
 .passwordchage ul li ul li{float:none; width:100%; height: 50px;  border:1px solid #ff8f00;}
@@ -303,9 +303,10 @@ footer> .noticeboardsubmit>button:hover{background:#000; color:#fff;}
 .passwordchage ul li ul li:nth-child(3){width:100%; float:left;}
 .passwordchage ul li ul li input{width:100%; float:left; height: 50px; border:none; } 
 .passwordchage .passwordchagesubmit{width:100%; float:left; margin-top:30px; }
-.passwordchage .passwordchagesubmit input[type=button]{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
-.passwordchage .passwordchagesubmit input:first-child{width:150px; height: 50px; background:#ffd54f; color:#FF8F00; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
-.passwordchage .passwordchagesubmit input[type=button]:hover{background:#FFCA28;}
+.passwordchage .passwordchagesubmit input[type=button]{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00; transition:0.4s; cursor:pointer;}
+.passwordchage .passwordchagesubmit input:first-child{width:150px; height: 50px; background:#FFCA28; color:#fff; border:1px solid #FF8F00;  margin-right:40px; transition:0.4s; cursor:pointer;}
+.passwordchage .passwordchagesubmit input[type=submit]:hover{background:#FFB300;}
+.passwordchage .passwordchagesubmit input[type=button]:hover{background:#FFB300;}
 
 
 /* 비밀번호 찾기 */
